--- a/package.json
+++ b/package.json
@@ -14,6 +14,14 @@
     "arangojs": "^8.6.0",
     "axios": "^1.6.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "country-state-city": "^3.2.1",
+    "express": "^4.18.2",
+    "react-icons": "^4.11.0",
+    "react-router-dom": "^6.17.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5"
   }
 }
